syntax = "proto2";

package mws.rng;

message BucketInfo {
  repeated Vec vc = 1;
  repeated bytes keys = 2;
}

message Data {
  required bytes key = 1;
  required int32 bucket = 2;
  required int64 lastModified = 3;
  repeated Vec vc = 4;
  required bytes value = 5;
}

message Vec {
  required string key = 1;
  required int64 value = 2;
}
