syntax = "proto2";

package mws.rng;

import "data.proto";

message ReplGetBucketsVc { 
  repeated int32 bs = 1;
}

message ReplBucketsVc {
  map<int32, ReplVectorClock> bvcs = 1;
}

message ReplVectorClock {
  repeated Vec vs = 1;
}

message ReplGetBucketIfNew { 
  required int32 b = 1;
  repeated Vec vc = 2;
}

message ReplBucketUpToDate {
}

message ReplNewerBucketData {
  repeated Vec vc = 1;
  repeated Data items = 2;
}

message ReplBucketPut {
  required int32 b = 1;
  repeated Vec bucketVc = 2;
  repeated Data items = 3;
}
